<resources>
	<string name="app_name" translatable="false">Eye AI (Dev)</string>
	<string name="depth_model_setting" translatable="false">depth_model</string>
	<string name="rel2abs_mode_setting" translatable="false">rel2abs_mode</string>
	<string name="camera_height_setting" translatable="false">camera_height_tenths</string>
	<string name="show_profiling_info_setting" translatable="false">show_profiling_info</string>
	<string name="show_debug_input_bitmap_setting" translatable="false">show_debug_input_bitmap</string>
	<string name="enable_speech_recognition_setting" translatable="false">enable_speech_recognition</string>
	<string name="nlp_model_setting" translatable="false">nlp_model</string>
	<string name="enable_ocr_setting" translatable="false">enable_ocr_setting</string>
	<string name="input_source_setting" translatable="false">input_source_setting</string>
	<string name="input_is_camera">Kamera</string>
	<string name="input_is_media" translatable="false">Media</string>
	<string name="media_path_setting" translatable="false">media_path_setting</string>
	<string name="input_is_eyeaivision" translatable="false">EyeAI-Vision</string>
	<string name="enable_object_detection_setting" translatable="false">enable_object_detection</string>
	<string name="enable_segmentation_setting" translatable="false">enable_segmentation</string>
	<string name="version_info_settings" translatable="false">version_info</string>
	<string name="build_time_settings" translatable="false">build_time</string>
	<string name="git_info_settings" translatable="false">git_info</string>
	<string name="build_variant_settings" translatable="false">build_variant</string>
	<string name="object_playback_setting" translatable="false">object_playback_setting</string>
	<string name="object_playback_language" translatable="false">object_playback_language</string>
	<string name="depth_playback_setting" translatable="false">depth_playback_setting</string>
	<string name="audio_frequency_range_setting" translatable="false">audio_frequency_range</string>
	<string name="audio_playback_rate_setting" translatable="false">audio_playback_rate</string>
	<string name="remember_audio_device" translatable="false">remember_audio_device</string>
	<string name="selected_audio_device" translatable="false">selected_audio_device</string>
	<string name="remember_eye_ai_vision" translatable="false">remember_eye_ai_vision</string>
	<string name="selected_eye_ai_vision" translatable="false">selected_eye_ai_vision</string>
	<string name="debugging_settings_category" translatable="false">debugging_settings_category</string>
	<string name="build_info_settings_category" translatable="false">build_info_settings_category</string>
	<string name="enable_depth_frame_rate_limit_setting" translatable="false">enable_depth_frame_rate_limit_setting</string>
	<string name="max_depth_frame_rate_setting" translatable="false">max_depth_frame_rate_setting</string>
	<string name="enable_object_detection_frame_rate_limit_setting" translatable="false">enable_object_detection_frame_rate_limit_setting</string>
	<string name="enable_segmentation_frame_rate_limit_setting" translatable="false">enable_segmentation_frame_rate_limit</string>
	<string name="max_object_detection_frame_rate_setting" translatable="false">max_object_detection_frame_rate_setting</string>
	<string name="max_segmentation_frame_rate_setting" translatable="false">max_segmentation_frame_rate</string>
	<string name="enable_npu_delegate_setting" translatable="false">Use NPU (experimental)</string>
	<string name="debug_page_activated" translatable="false">debug_page_activated</string>
	<string name="app_tutorial_completed" translatable="false">app_tutorial_completed</string>
	<string name="language_is_german">Deutsch</string>
	<string name="language_is_english">Englisch</string>
	<string name="app_logo_description">EyeAI-App-Logo</string>
	<string name="start_app_button_text">App starten</string>
	<string name="decline_action">Ablehnen</string>
	<string name="accept_action">Zulassen</string>
	<string name="confirm_permission_decline_title">Berechtigung ablehnen?</string>
	<string name="return_icon_description">Zurück</string>
	<string name="information_not_found_text">Diese Information konnte leider nicht gefunden werden.</string>
	<string name="confirm_decline_action">Trotzdem ablehnen</string>
	<string name="camera_permission_name">Kamera</string>
	<string name="camera_permission_explanation_text">Damit die KI Ihre Umgebung analysieren kann, benötigt die App Zugriff auf die Kamera. Die Kamerabilder werden verwendet, um Entfernungen zu schätzen und Objekte in Ihrer Umgebung zu erkennen. Diese Informationen werden Ihnen anschließend per Audio mitgeteilt.</string>
	<string name="camera_icon_description">Kamerasymbol. Auf dieser Seite können Sie die Kameraberechtigung verwalten.</string>
	<string name="camera_permission_decline_semantic">Kamerazugriff ablehnen.</string>
	<string name="camera_permission_accept_semantic">Kamerazugriff zulassen.</string>
	<string name="camera_confirm_decline_explanation_text">Wenn Sie den Kamerazugriff ablehnen, können Sie die App nicht verwenden.</string>
	<string name="camera_confirm_permission_decline_semantic">Kamerazugriff trotzdem ablehnen. Die App wird beendet.</string>
	<string name="microphone_permission_name">Mikrofon</string>
	<string name="microphone_permission_explanation_text">Um die App per Sprachbefehl zu steuern, müssen Sie den Zugriff auf das Mikrofon zulassen.</string>
	<string name="microphone_icon_description">Mikrofonsymbol. Auf dieser Seite können Sie die Mikrofonberechtigung verwalten.</string>
	<string name="microphone_permission_decline_semantic">Mikrofonzugriff ablehnen.</string>
	<string name="microphone_permission_accept_semantic">Mikrofonzugriff zulassen.</string>
	<string name="microphone_confirm_permission_decline_explanation_text">Wenn Sie den Mikrofonzugriff ablehnen, können Sie keine Sprachbefehle verwenden.</string>
	<string name="microphone_confirm_permission_decline_semantic">Mikrofonzugriff trotzdem ablehnen. Sprachbefehle werden deaktiviert.</string>
	<string name="notification_permission_name">Benachrichtigungen</string>
	<string name="notification_permission_explanation_text">Damit EyeAI im Hintergrund zuverlässig angezeigt und über die Dauerbenachrichtigung beendet werden kann, benötigt die App die Berechtigung für Benachrichtigungen.</string>
	<string name="notification_icon_description">Informationssymbol. Auf dieser Seite können Sie die Benachrichtigungsberechtigung verwalten.</string>
	<string name="notification_permission_decline_semantic">Aktivitätsbenachrichtigung ablehnen.</string>
	<string name="notification_permission_accept_semantic">Aktivitätsbenachrichtigung zulassen.</string>
	<string name="notification_confirm_decline_explanation_text">Wenn Sie Benachrichtigungen ablehnen, kann die Dauerbenachrichtigung für den Hintergrundbetrieb nicht in der Benachrichtigungsleiste angezeigt werden.</string>
	<string name="notification_confirm_permission_decline_semantic">Benachrichtigungsberechtigung trotzdem ablehnen. Die Dauerbenachrichtigung wird nicht angezeigt.</string>
	<string name="runtime_notification_channel_name">EyeAI-Dauerbetrieb</string>
	<string name="runtime_notification_channel_description">Kamera, Analyse und Audio laufen auch bei ausgeschaltetem Display.</string>
	<string name="runtime_notification_title">EyeAI läuft</string>
	<string name="runtime_notification_text">Kamera-Analyse und Audio sind im Dauerbetrieb aktiv</string>
	<string name="runtime_notification_stop_action">EyeAI beenden</string>
	<string name="wifi_permission_name">WLAN-Geräte in der Nähe</string>
	<string name="wifi_permission_explanation_text">Um eine Verbindung zu einem EyeAI-Vision-Gerät herzustellen, benötigt die App Zugriff auf WLAN-Geräte in der Nähe.</string>
	<string name="wifi_icon_description">WLAN-Symbol. Auf dieser Seite können Sie die WLAN-Berechtigung verwalten.</string>
	<string name="wifi_permission_decline_semantic">Zugriff auf WLAN-Geräte in der Nähe ablehnen.</string>
	<string name="wifi_permission_accept_semantic">Zugriff auf WLAN-Geräte in der Nähe zulassen.</string>
	<string name="wifi_confirm_decline_explanation_text">Wenn Sie den Zugriff auf WLAN-Geräte in der Nähe ablehnen, können Sie kein EyeAI-Vision-Gerät verwenden.</string>
	<string name="wifi_confirm_permission_decline_semantic">Zugriff auf WLAN-Geräte in der Nähe trotzdem ablehnen. Stattdessen wird die Kamera des Telefons verwendet.</string>
	<string name="location_permission_name">Standort</string>
	<string name="location_permission_explanation_text">Beim Suchen nach WLAN-Netzwerken könnten Informationen über Ihren Standort erfasst werden. Die App speichert oder verwendet Ihren Standort zu keinem Zeitpunkt.</string>
	<string name="location_icon_description">Standortsymbol. Auf dieser Seite können Sie die Standort-Berechtigung verwalten.</string>
	<string name="location_permission_decline_semantic">Standortzugriff ablehnen.</string>
	<string name="location_permission_accept_semantic">Standortzugriff zulassen.</string>
	<string name="location_confirm_decline_explanation_text">Wenn Sie den Standortzugriff ablehnen, können Sie kein EyeAI-Vision-Gerät verwenden.</string>
	<string name="location_confirm_permission_decline_semantic">Standortzugriff trotzdem ablehnen. Stattdessen wird die Kamera des Telefons verwendet.</string>
	<string name="device_eyeaivision_name">EyeAI-Vision auswählen</string>
	<string name="device_audio_name">Audiogerät auswählen</string>
	<string name="choose_eyeaivision_as_audio_text">EyeAI-Vision als Audiogerät verwenden</string>
	<string name="eyeaivision_as_audio_text">EyeAI-Vision</string>
	<string name="choose_system_as_audio_text">Systemaudiogerät verwenden</string>
	<string name="system_as_audio_text">Systemaudiogerät</string>
	<string name="choose_camera_as_input_text">Telefonkamera verwenden</string>
	<string name="camera_as_input_text">Telefonkamera</string>
	<string name="no_available_devices_text">Keine Geräte gefunden.</string>
	<string name="standard_device_text">Standardgerät</string>
	<string name="refresh_icon_description">Liste aktualisieren</string>
	<string name="return_text">Zurück</string>
	<string name="connect_text">Verbinden</string>
	<string name="connection_failed_title">Verbindung fehlgeschlagen</string>
	<string name="connection_failed_text">Die Verbindung zum Gerät konnte nicht hergestellt werden.</string>
	<string name="location_disabled_title">Standortdienste sind deaktiviert</string>
	<string name="location_disabled_text">Da die Suche nach WLAN-Netzwerken in der Nähe Rückschlüsse auf Ihren Standort zulassen könnte, verlangt Android, dass die Standortdienste aktiviert sind. Die App selbst verwendet Ihren Standort nicht.</string>
	<string name="activate_text">Aktivieren</string>
	<string name="object_detection_card_title">Objekterkennung</string>
	<string name="object_detection_card_disabled_text">Objekterkennung deaktiviert</string>
	<string name="status_card_active_text">Aktiv</string>
	<string name="status_card_performance_text">Leistung</string>
	<string name="home_page_app_bar_title_text">EyeAI-App</string>
	<string name="vision_card_title">EyeAI-Vision</string>
	<string name="vision_card_no_vision_connected_text">Kein EyeAI-Vision verbunden. Telefonkamera wird verwendet.</string>
	<string name="vision_card_name_text">Name</string>
	<string name="vision_card_connection_text">Verbindung</string>
	<string name="vision_card_battery_text">Akku</string>
	<string name="depth_estimation_card_title">Tiefenschätzung</string>
	<string name="segmentation_card_title">Segmentierung</string>
	<string name="segmentation_card_semantic">Status der Bild-Segmentierung.</string>
	<string name="segmentation_card_disabled">Bild-Segmentierung deaktiviert</string>
	<string name="vosk_card_title">Spracherkennung</string>
	<string name="vosk_card_responding">EyeAI antwortet…</string>
</resources>