<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="General">
        <CheckBoxPreference
            app:key="@string/show_profiling_info_setting"
            app:title="Show Profiling Information" />

        <CheckBoxPreference
            app:key="@string/show_debug_input_bitmap_setting"
            app:title="Show Debug Input Bitmap"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Depth Estimation">
        <ListPreference
            app:key="@string/depth_model_setting"
            app:title="Depth Estimation Model"
            app:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Speech Recognition">
        <CheckBoxPreference
            app:key="@string/enable_speech_recognition_setting"
            app:title="Enabled"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="LLM">
        <EditTextPreference
            app:key="@string/google_ai_studio_api_key_stetting"
            app:title="Google AI Studio API Key" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Object Detection">
        <CheckBoxPreference
            app:key="@string/enable_object_detection_setting"
            app:title="Enabled"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="OCR">
        <CheckBoxPreference
            app:key="@string/enable_ocr_setting"
            app:title="Enabled"
            app:defaultValue="true" />
    </PreferenceCategory>

    // this will be populated by SettingsActivity.kt
    <PreferenceCategory app:title="Build Info">
        <Preference
            app:key="version_info"
            app:title="App Version"/>

        <Preference
            app:key="build_time"
            app:title="Build Time"/>

        <Preference
            app:key="git_info"
            app:title="Git Information"/>

        <Preference
            app:key="build_variant"
            app:title="Build Variant"/>
    </PreferenceCategory>
</PreferenceScreen>